src/gallium/drivers/r300/r300_context.c
@@ -412,10 +412,8 @@ struct pipe_context* r300_create_context(struct pipe_screen* screen,
     r300->context.create_video_decoder = vl_create_decoder;
     r300->context.create_video_buffer = vl_video_buffer_create;
 
-    if (r300screen->caps.has_tcl) {
-        r300->uploader = u_upload_create(&r300->context, 256 * 1024, 4,
-                                         PIPE_BIND_INDEX_BUFFER);
-    }
+    r300->uploader = u_upload_create(&r300->context, 256 * 1024, 4,
+                                     PIPE_BIND_CUSTOM);
 
     r300->blitter = util_blitter_create(&r300->context);
     if (r300->blitter == NULL)
